--- a/packages/xhr-mock/package.json
+++ b/packages/xhr-mock/package.json
@@ -18,14 +18,12 @@
   "repository": "jameslnewell/xhr-mock",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
-  "files": [
-    "lib",
-    "dist"
-  ],
+  "files": ["lib", "dist"],
   "browser": {
     "./lib/proxy.js": "./lib/proxy.browser.js"
   },
   "dependencies": {
+    "bluebird": "^3.5.3",
     "global": "^4.3.0",
     "url": "^0.11.0"
   },
@@ -52,7 +50,8 @@
     "build": "yarn run build:cjs && yarn run build:umd",
     "test": "jest",
     "test:watch": "jest --watch",
-    "ci": "yarn run clean && yarn run check && yarn run lint && yarn run build && yarn run test"
+    "ci":
+      "yarn run clean && yarn run check && yarn run lint && yarn run build && yarn run test"
   },
   "license": "MIT"
 }
